--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -31,14 +31,21 @@
         </servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>WEB-INF/jsp/hello.jsp</param-value>
+            <param-value>/WEB-INF/spring/services-servlet.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            /WEB-INF/spring/application-context.xml
+        </param-value>
+    </context-param>
+
     <servlet-mapping>
         <servlet-name>MyApp</servlet-name>
-        <url-pattern>/world</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 </web-app>
